--- a/PointerEngine/PointerEngine/PointerEngine.csproj
+++ b/PointerEngine/PointerEngine/PointerEngine.csproj
@@ -20,6 +20,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -42,10 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PointerEngineHelper.cs" />
-    <Compile Include="PointerEngineDevice.cs" />
-    <Compile Include="PointerEngineInput.cs" />
-    <Compile Include="PointerEngineRenderer.cs" />
+    <Compile Include="Helper.cs" />
+    <Compile Include="Device.cs" />
+    <Compile Include="Input.cs" />
+    <Compile Include="Renderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
